# dazzle

./: .gitignore  README.md  pyproject.toml
src/dazzle/: __init__.py  cli.py  compiler.py  config.py  errors.py  html.py  html_parser.py  images.py  runtime.js  slides.py  theme.css
src/dazzle/extensions/: __init__.py  fragment_extension.py
test/: test_cli.py  test_config.py  test_html.py  test_images.py  test_render.py
