[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dazzle"
version = "0.1.0"
description = "Compile Markdown into self-contained HTML slide decks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "markdown>=3.5",
  "pygments>=2.17",
]

[project.scripts]
dazzle = "dazzle.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dazzle = ["runtime.js", "theme.css"]
